--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sample vehicle information with TypeScript, Angular, Edmunds API",
   "main": "app/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "npm install"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/LatinWarrior/angular-typescript-edmunds/issues"
   },
-  "homepage": "https://github.com/LatinWarrior/angular-typescript-edmunds#readme"
+  "homepage": "https://github.com/LatinWarrior/angular-typescript-edmunds#readme",
+  "dependencies": {
+    "angular": "^1.6.3",
+    "angular-ui-router": "^0.4.2",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "typescript": "^2.2.1"
+  },
+  "devDependencies": {
+    "lite-server": "^2.3.0",
+    "modernizr": "^3.4.0"
+  }
 }
